hw3/canary/book/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: books
  namespace: istio-course
spec:
  host: books
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
