hw3/canary/book/vs-100.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books-v2-100
  namespace: istio-course
spec:
  hosts:
  - books
  http:
  - route:
    - destination:
        host: books
        subset: v1
      weight: 0
    - destination:
        host: books
        subset: v2
      weight: 100
