hw3/canary/book/vs-50.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books-v2-50
  namespace: istio-course
spec:
  hosts:
  - books
  http:
  - route:
    - destination:
        host: books
        subset: v1
      weight: 50
    - destination:
        host: books
        subset: v2
      weight: 50
